There were added registration and authorization of users. Also, there were added restrictions on access to the administrator account and to certain routes.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,7 @@
     "/css/styles.css": "/css/styles.css",
     "/js/scripts.js": "/js/scripts.js",
     "/img/187604chan1309313071950.jpg": "/img/187604chan1309313071950.jpg",
-    "/img/555946b1b027f7626674951f6f236e9198f06211.jpg": "/img/555946b1b027f7626674951f6f236e9198f06211.jpg"
+    "/img/555946b1b027f7626674951f6f236e9198f06211.jpg": "/img/555946b1b027f7626674951f6f236e9198f06211.jpg",
+    "/img/bay.jpg": "/img/bay.jpg",
+    "/img/sea.jpg": "/img/sea.jpg"
 }
